// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Phoneme matches snapshot (default) 1`] = `
<DocumentFragment>
  <div
    class="absolute text-black text-center border border-black rounded cursor-grab whitespace-nowrap bg-[#ffff99] hover:bg-[#ffff99aa] transition-colors duration-200 ease-in-out"
    style="width: 20%; left: 10%;"
  >
    <div
      class="absolute top-0 h-full cursor-col-resize left-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="select-none"
    >
      a
    </div>
    <div
      class="absolute top-0 h-full cursor-col-resize right-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="absolute top-0 h-full cursor-col-resize"
      style="z-index: 2; width: 5px; right: -2.5px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Phoneme matches snapshot (hideChainResizer) 1`] = `
<DocumentFragment>
  <div
    class="absolute text-black text-center border border-black rounded cursor-grab whitespace-nowrap bg-[#ffff99] hover:bg-[#ffff99aa] transition-colors duration-200 ease-in-out"
    style="width: 20%; left: 10%;"
  >
    <div
      class="absolute top-0 h-full cursor-col-resize left-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="select-none"
    >
      a
    </div>
    <div
      class="absolute top-0 h-full cursor-col-resize right-0"
      style="z-index: 2; width: 5px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Phoneme matches snapshot (movingInProgress) 1`] = `
<DocumentFragment>
  <div
    class="absolute text-black text-center border border-black rounded cursor-grab whitespace-nowrap bg-[#ffff99] hover:bg-[#ffff99aa] transition-colors duration-200 ease-in-out shadow-[0_4px_8px_0_white] u-translate-y-[5px] cursor-grabbing transition-transform transition-shadow duration-200 ease-in-out"
    style="width: 20%; left: 10%;"
  >
    <div
      class="absolute top-0 h-full cursor-col-resize left-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="select-none"
    >
      a
    </div>
    <div
      class="absolute top-0 h-full cursor-col-resize right-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="absolute top-0 h-full cursor-col-resize"
      style="z-index: 2; width: 5px; right: -2.5px;"
    />
  </div>
</DocumentFragment>
`;

exports[`Phoneme matches snapshot (without borders) 1`] = `
<DocumentFragment>
  <div
    class="absolute text-black text-center border border-black rounded cursor-grab whitespace-nowrap bg-[#ffff99] hover:bg-[#ffff99aa] transition-colors duration-200 ease-in-out border-l-0 border-r-0"
    style="width: 20%; left: 10%;"
  >
    <div
      class="absolute top-0 h-full cursor-col-resize left-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="select-none"
    >
      a
    </div>
    <div
      class="absolute top-0 h-full cursor-col-resize right-0"
      style="z-index: 2; width: 5px;"
    />
    <div
      class="absolute top-0 h-full cursor-col-resize"
      style="z-index: 2; width: 5px; right: -2.5px;"
    />
  </div>
</DocumentFragment>
`;
